infra/uds-bundles/uds-bundles/PER_BUNDLE/a11oy/manifests/virtualservice.yaml
# Copyright 2026 SZL Holdings — SPDX-License-Identifier: Apache-2.0
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: a11oy
  namespace: a11oy
spec:
  hosts:
    - "a11oy.uds.dev"
  gateways:
    - istio-tenant-gateway/tenant
  http:
    - match:
        - uri:
            prefix: /api/a11oy
      route:
        - destination:
            host: a11oy.a11oy.svc.cluster.local
            port:
              number: 8080
